# dotfiles

./: .chezmoiignore  .envrc.template  .gitignore  .opencode-autoresearch-state.json  .stowrc  AGENTS.md  CLAUDE.md  PERF.md  README.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  brew.txt  configure.sh  dot_gitconfig.tmpl  dot_p10k.zsh  dot_tmux.conf  dot_zsh_early.example  dot_zsh_secrets.example  dot_zshenv  dot_zshrc  install.sh  nix-packages.txt  rss-feeds.txt  run_once_install-omo-codex.sh.tmpl  run_once_install-zsh-plugins.sh.tmpl  run_onchange_install-lstags.sh.tmpl  run_onchange_zcompile.sh.tmpl  stow-all.sh  vimium-options.json
checks/: 00-binaries.sh  10-repo-hygiene.sh  20-zsh-plugins.sh  30-host.sh  README.md  alt-identity.sh  claude.sh  zsh.sh
claude/: .stow-local-ignore  README.md  dot-checks.sh
docs/: ARCHITECTURE.md  IDEAS.md  PLAYBOOKS.md  REVERSIBLES.md  RICE-CHEATSHEET.md  RICE.md  TODO.md  homelab-bootstrap-checklist.md  homelab-jarvis-guidelines.md  nix.md  setup.md
dot_claude/: modify_settings.json  settings.json
dot_codex/: modify_config.toml
dot_config/: starship.toml
dot_zsh/: aliases.zsh
git/: .gitconfig  .gitconfig.template
pi/: .stow-local-ignore
private_dot_ssh/: config
scripts/: .gitconfig-alt.example  .gitconfig-work.example  bootstrap-darwin.sh  bootstrap-linux.sh  migrate-to-chezmoi.sh  setup-alt-identity.sh  setup-chezmoi.sh
src/lstags/: Cargo.toml
src/lstags/src/: main.rs  tags.rs
tig/: .tigrc
tmux/: .tmux.conf
zsh/: .zprofile  .zsh_plugins.txt  .zshrc  (+3 more)
(+108 files in other folders)
